src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>SendSafely_URL__c</fullName>
        <formula>IF(
   BEGINS(Email_to_Case_Origin__c,'EHSP'),
   CASE(Email_to_Case_Origin__c, 
          "EHSP Escalations","https://securefiles-sp.pivotal.io/dropzone/ehsp-support/",
                             "https://securefiles-sp.pivotal.io/dropzone/ehsp-support/"
        ),
   CASE(Account.Special_Handling__c,
           "Standard", "https://securefiles.pivotal.io/dropzone/customer-service/", 
           "EH - Executive Handling", "https://securefiles-sp.pivotal.io/dropzone/ehsp-support/", 
           "SP - Special Practices", "https://securefiles-sp.pivotal.io/dropzone/ehsp-support/",
           "EU - Safe Harbour", "https://securefiles-eu.pivotal.io/dropzone/customer-service/", 
           "EU - Global Access","https://securefiles-eu.pivotal.io/dropzone/eu-support/", 
           "https://securefiles.pivotal.io/dropzone/customer-service/" 
        ) 
    ) 
+
CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SendSafely URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Category__c</fullName>
        <label>Services Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>API Gateway (EOL)</fullName>
                </value>
                <value>
                    <fullName>App AutoScaler</fullName>
                </value>
                <value>
                    <fullName>App AutoScaler::1.3.x</fullName>
                </value>
                <value>
                    <fullName>App Distribution</fullName>
                </value>
                <value>
                    <fullName>App Distribution::1.2.x</fullName>
                </value>
                <value>
                    <fullName>App Distribution::1.3.x</fullName>
                </value>
                <value>
                    <fullName>Concourse</fullName>
                </value>
                <value>
                    <fullName>Concourse::Alpha</fullName>
                </value>
                <value>
                    <fullName>Data Sync (EOL)</fullName>
                </value>
                <value>
                    <fullName>Gemfire</fullName>
                </value>
                <value>
                    <fullName>Gemfire::1.0.x</fullName>
                </value>
                <value>
                    <fullName>Gemfire::1.1.x</fullName>
                </value>
                <value>
                    <fullName>Gemfire::1.2.x</fullName>
                </value>
                <value>
                    <fullName>Gemfire::1.3.x</fullName>
                </value>
                <value>
                    <fullName>Gemfire::1.4.x</fullName>
                </value>
                <value>
                    <fullName>Gemfire::1.5.x</fullName>
                </value>
                <value>
                    <fullName>Gemfire::1.6.x</fullName>
                </value>
                <value>
                    <fullName>Kafka</fullName>
                </value>
                <value>
                    <fullName>Kafka::Alpha</fullName>
                </value>
                <value>
                    <fullName>MongoDB</fullName>
                </value>
                <value>
                    <fullName>MongoDB::1.3.x</fullName>
                </value>
                <value>
                    <fullName>MongoDB::1.4.x</fullName>
                </value>
                <value>
                    <fullName>MySQL</fullName>
                </value>
                <value>
                    <fullName>MySQL::1.3.2.0</fullName>
                </value>
                <value>
                    <fullName>MySQL::1.4.0.0</fullName>
                </value>
                <value>
                    <fullName>MySQL::1.5.0.0</fullName>
                </value>
                <value>
                    <fullName>MySQL::1.6.x</fullName>
                </value>
                <value>
                    <fullName>MySQL::1.7.x</fullName>
                </value>
                <value>
                    <fullName>MySQL::1.8.x</fullName>
                </value>
                <value>
                    <fullName>Neo4j</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_1_Details__c</fullName>
        <description>Why is this ticket classified as a Severity 1? Is a system down?</description>
        <label>Severity 1 Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Slack_Channel_Name__c</fullName>
        <description>For heightened awareness events</description>
        <label>Slack Channel Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling_Instructions__c</fullName>
        <description>This field will display will display Handling Instructions on case</description>
        <label>Handling Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Handling_Type__c</fullName>
        <label>Special Handling Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EU - Safe Harbour</fullName>
                </value>
                <value>
                    <fullName>Executive Handling (Non-BRICE)</fullName>
                </value>
                <value>
                    <fullName>Special Practices (US Citizen, US Soil)</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Handling__c</fullName>
        <formula>IF( ISPICKVAL(Account.Special_Handling__c,'EH - Executive Handling') ,'Executive Handling (Non-BRICE)',
 IF( ISPICKVAL(Account.Special_Handling__c,'SP - Special Practices') ,'Special Practices (US Citizen, US Soil)',
IF( ISPICKVAL(Account.Special_Handling__c,'EU - Safe Harbour') ,'EU - Safe Harbour',
 IF(ISPICKVAL( Account.Special_Handling__c ,'Standard') , 'Standard', 
NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Handling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steps_to_Resolve__c</fullName>
        <label>Steps to Resolve</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party/ISV Software Issue</fullName>
                </value>
                <value>
                    <fullName>Customer Application Issue</fullName>
                </value>
                <value>
                    <fullName>Customer Environment Issue</fullName>
                </value>
                <value>
                    <fullName>Documented Limitation</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Duplicate Issue (Tracked in Different Ticket)</fullName>
                </value>
                <value>
                    <fullName>Engineering Intervention Required</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Fix in Higher Version(Upgrade)</fullName>
                    <label>Fix in Higher Version (Upgrade)</label>
                </value>
                <value>
                    <fullName>Insufficient Information</fullName>
                </value>
                <value>
                    <fullName>Reconfig Network Configuration</fullName>
                    <label>Network Configuration</label>
                </value>
                <value>
                    <fullName>Not Reproducible</fullName>
                </value>
                <value>
                    <fullName>Product Configuration</fullName>
                </value>
                <value>
                    <fullName>Reported Product Defect (pending fix)</fullName>
                </value>
                <value>
                    <fullName>VM/JVM Configuration</fullName>
                </value>
                <value>
                    <fullName>Workaround Provided</fullName>
                </value>
                <value>
                    <fullName>Works as Designed</fullName>
                </value>
                <value>
                    <fullName>Escalation Acknowledged</fullName>
                    <isActive>false</isActive>
                    <label>Escalation Acknowledged</label>
                </value>
                <value>
                    <fullName>Hardware Repair/Replacement</fullName>
                    <isActive>false</isActive>
                    <label>Hardware Repair/Replacement</label>
                </value>
                <value>
                    <fullName>Install hot fix</fullName>
                    <isActive>false</isActive>
                    <label>Install hot fix</label>
                </value>
                <value>
                    <fullName>Known Issue - No fix available yet</fullName>
                    <isActive>false</isActive>
                    <label>Known Issue - No fix available yet</label>
                </value>
                <value>
                    <fullName>Notification Acknowedged</fullName>
                    <isActive>false</isActive>
                    <label>Notification Acknowedged</label>
                </value>
                <value>
                    <fullName>Provide instructions</fullName>
                    <isActive>false</isActive>
                    <label>Provide instructions</label>
                </value>
                <value>
                    <fullName>Reconfig Pivotal software</fullName>
                    <isActive>false</isActive>
                    <label>Reconfig Pivotal software</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Component__c</fullName>
        <label>Sub Component</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Component__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Component</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting For R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Waiting For Support</fullName>
                </value>
                <value>
                    <fullName>Waiting For Customer</fullName>
                </value>
                <value>
                    <fullName>RPS Hold</fullName>
                </value>
                <value>
                    <fullName>Waiting for RPS</fullName>
                    <isActive>false</isActive>
                    <label>Waiting for RPS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Truncated__c</fullName>
        <description>8.6.18[HG] Hidden field created to truncate Case Subject for Email templates</description>
        <formula>((LEFT( Subject,100))+'...')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>8.6.18[HG] Hidden field created to truncate Case Subject for Email templates</inlineHelpText>
        <label>Subject (Truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Exceptions_Granted__c</fullName>
        <formula>Account.Support_Exceptions_Granted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Exceptions Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Exceptions_Rejected__c</fullName>
        <formula>Account.Support_Exceptions_Rejected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Exceptions Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Score__c</fullName>
        <label>Survey Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Swarming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swarming?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TURNOVER__c</fullName>
        <label>TURNOVER?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>GLOBAL CSR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThreadId_Text__c</fullName>
        <label>ThreadId Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThreadId__c</fullName>
        <formula>"ref:_"&amp;LEFT($Organization.Id,5)&amp;SUBSTITUTE(RIGHT($Organization.Id,10),"0","")
&amp;"._"&amp;LEFT(Id,5)&amp;SUBSTITUTE(LEFT(RIGHT(Id,10),5),"0","")&amp;RIGHT(Id,5)&amp;":ref"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ThreadId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <label>Total Time Spent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent_last_update_sec__c</fullName>
        <label>Total Time Spent last update sec</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Versions__c</fullName>
        <label>Product Version</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Products__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Version</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_action_were_you_performing__c</fullName>
        <label>What action were you performing?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Start/Restart</fullName>
                </value>
                <value>
                    <fullName>Expand/Scale - Adding VM/Node/Clusters</fullName>
                </value>
                <value>
                    <fullName>Network Configuration Change</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Configuration Change</fullName>
                </value>
                <value>
                    <fullName>Maintenance/HouseKeeping</fullName>
                </value>
                <value>
                    <fullName>Normal Operations (Steady State)</fullName>
                </value>
                <value>
                    <fullName>Crash/Failure</fullName>
                </value>
                <value>
                    <fullName>Deploy a new version of my application</fullName>
                </value>
                <value>
                    <fullName>Advanced Notification(Scheduled Event)</fullName>
                    <isActive>false</isActive>
                    <label>Advanced Notification(Scheduled Event)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All_Cases_Internal</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases_Internal</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Cases</label>
        <sharedTo>
            <group>Customer_Engineer</group>
            <group>Customer_Service</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases_Portal</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Cases</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases_External</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>Portal_Users_cases</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases_Internal</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,On Hold,Escalated,Pending</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>Customer_Engineer</group>
            <group>Customer_Service</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Engineers_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Case_Contact_Geo__c</columns>
        <columns>Products__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Solved,Closed</value>
        </filters>
        <label>Customer Engineers</label>
        <queue>Customer_Engineers</queue>
        <sharedTo>
            <group>Customer_Engineer</group>
            <group>Customer_Service</group>
            <group>R_D</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Support_All_Global_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>SLA_Target_date__c</columns>
        <columns>SLO_Flag__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Products__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Customer Support,Special Practices - CSR,EH/SP Escalations</value>
        </filters>
        <label>Customer Support All Global Cases</label>
        <sharedTo>
            <group>Customer_Service</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Support_All_Unsolved_Cases</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Legacy_Zendesk_Case_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>SLA_Target_date__c</columns>
        <columns>SLO_Flag__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Solved</value>
        </filters>
        <filters>
            <field>Case_Owner_Role__c</field>
            <operation>contains</operation>
            <value>Customer Service,Customer Suupport</value>
        </filters>
        <label>Customer Support - All Unsolved Cases</label>
        <sharedTo>
            <group>Customer_Service</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Support_Email</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Solved</value>
        </filters>
        <label>Customer Support - Email</label>
        <queue>Customer_Service</queue>
        <sharedTo>
            <group>Customer_Service</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Support_Pending_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Customer Support - Pending Cases</label>
        <queue>Customer_Service</queue>
        <sharedTo>
            <group>Customer_Service</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EH_SP_Escalations_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>EH/SP Escalations</label>
        <queue>EH_SP_Escalations</queue>
        <sharedTo>
            <group>EH_SP</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EU_Safe_Harbour_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Special_Handling__c</field>
            <operation>contains</operation>
            <value>EU - Safe Harbour</value>
        </filters>
        <label>EU Safe Harbour</label>
        <queue>EU_Safe_Harbour</queue>
        <sharedTo>
            <group>EU_Safe_Harbour</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Escalation_Management_Requested</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Products__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>Escalation_Accepted__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escalation_Management_Escalation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Solved</value>
        </filters>
        <label>Escalation Management Requested</label>
        <sharedTo>
            <group>Customer_Engineer</group>
            <group>Customer_Service</group>
            <group>R_D</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Executive_Handling_Non_BRICE_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Executive Handling (Non-BRICE)</label>
        <queue>Executive_Handling_Non_BRICE</queue>
        <sharedTo>
            <group>EH_SP</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases_Internal</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <businessProcess>Pivotal Support</businessProcess>
        <label>Non-Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <businessProcess>Pivotal Support</businessProcess>
        <label>Technical</label>
    </recordTypes>
    <validationRules>
        <fullName>Case_Open_on_Expired_Entitlement</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;  NOT(Entitlement.Active__c = 'Active') &amp;&amp; 
NOT(ISBLANK(Entitlement.Name))</errorConditionFormula>
        <errorMessage>Please open this case under an active entitlement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_owner_on_solved_case</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Status,'Solved') ,ISCHANGED( OwnerId ) )</errorConditionFormula>
        <errorMessage>Case Owner cannot be changed on solved case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Case_Queue_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISCHANGED(Status), ISPICKVAL( Status , 'Solved'), Owner:Queue.Id  &lt;&gt; NULL )</errorConditionFormula>
        <errorMessage>Case can not be closed if a case queue is the case owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EH_SP_user</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 ISCHANGED( OwnerId ) ,

OR( Special_Handling__c ='Executive Handling (Non-BRICE)', 
 Special_Handling__c  ='Special Practices (US Citizen, US Soil)',Email_to_Case_Origin__c ='EHSP Escalations'), 
OR(
AND(
OwnerId = Owner:User.Id, 
Owner:User.EHSP_Qualified__c = false
),
AND(
OwnerId = Owner:Queue.Id,
aND( Owner:Queue.Name !="Executive Handling (Non-BRICE)",
    Owner:Queue.Name !="Special Practices (US Citizen, US Soil)",
Owner:Queue.Name !="EH/SP Escalations",
Owner:Queue.Name !="Special Practices - CSR")
)
)
 
)</errorConditionFormula>
        <errorMessage>You can not transfer this case to a user who isn't EH/SP qualified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_Safe_Habour_User</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 ISCHANGED( OwnerId ) ,
 Special_Handling__c ='EU - Safe Harbour', 
  
OR(
AND(
OwnerId = Owner:User.Id, 
Owner:User.EU_Safe_Harbour_qualified__c = false
),
AND(
OwnerId = Owner:Queue.Id,
Owner:Queue.Name !="EU Safe Harbour"
)
)
 
)</errorConditionFormula>
        <errorMessage>Case with special handling as EU Safe harbour should route to EU Safe Harbour queue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Entitlement_Needed_to_Change_to_Tech</fullName>
        <active>false</active>
        <description>Entitlement is needed before changing owner to a CE user or the CE queue.</description>
        <errorConditionFormula>ISBLANK(EntitlementId) &amp;&amp;
ISCHANGED(OwnerId) &amp;&amp; 

(Owner:Queue.QueueName  = "Customer Engineers" ||  
	Owner:User.ProfileId = " $Label.Pivotal_Customer_Engineering ")</errorConditionFormula>
        <errorMessage>Please add an entitlement to this case before transferring to CE queue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Able_to_Turnover</fullName>
        <active>true</active>
        <errorConditionFormula>and( NOT(ISBLANK( TEXT(TURNOVER__c)) ),
  or( Special_Handling__c ='Special Practices (US Citizen, US Soil)' ,
  Special_Handling__c ='Executive Handling (Non-BRICE)' ,
Special_Handling__c ='EU - Safe Harbour'
  )
)</errorConditionFormula>
        <errorMessage>You are not allowed to Turnover</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Portal_users_cannot_be_case_owners</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(OwnerId),Owner:User.ContactId !=null)</errorConditionFormula>
        <errorMessage>Portal User cannot be a case owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_KB_Doc_Resource</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(Related_KB_Article__c ), 
ISPICKVAL( Related_KB_Article__c ,'KB/Doc exists' ) , 
ISBLANK( KB_Doc_Resource__c ) 
)</errorConditionFormula>
        <errorDisplayField>KB_Doc_Resource__c</errorDisplayField>
        <errorMessage>Please fill out KB Doc Resource field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solve_Case_NonTechnical</fullName>
        <active>false</active>
        <description>When the status of the case is changed to Solved, the required fields must be filled</description>
        <errorConditionFormula>AND(  RecordType.Name = "Non-Technical",
      ISCHANGED(Status),
      ISPICKVAL(Status, 'Solved'),
      OR(
         ISPICKVAL(Products__c,''),
         ISPICKVAL(Customer_Service_Category__c,''),
         ISPICKVAL(Customer_Service_Sub_Category_1__c,''),
         ISPICKVAL(Related_KB_Article__c,'')
         )
    )</errorConditionFormula>
        <errorMessage>Please fill Product, Customer Services Category, Customer Services Sub Category 1 &amp; Related KB Article in order to solve the case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solve_Case_Technical</fullName>
        <active>false</active>
        <description>When the status of the case is changed to Solved, the required fields must be filled</description>
        <errorConditionFormula>AND(  RecordType.Name = "Technical",
      ISCHANGED(Status),
      ISPICKVAL(Status, 'Solved'),
      OR(
         ISPICKVAL(Products__c,''),
         ISPICKVAl(Related_KB_Article__c,''),
         ISPICKVAL(Case_Type__c,''),
         ISBLANK(Resolution__c),
         ISPICKVAL(Steps_to_Resolve__c,''),
         ISPICKVAL(Resolution_Opportunity_Root_Cause__c,'')
         )
    )</errorConditionFormula>
        <errorMessage>Please fill Product, Related KB Article, Case Type, Resolution Code, Resolution, Steps to Resolve &amp; Prevention Opportunity fields in order to solve the case.</errorMessage>
    </validationRules>
</CustomObject>