src/objects/Case.object
<CustomObject>
    <validationRules>
        <fullName>Specific_value_to_solve_a_case</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL( Status , 'Solved'),
OR(
ISPICKVAL( Products__c , 'Other'), 
ISPICKVAL( Versions__c , 'Other'), 
Resolution__c  = 'Other'),False)</errorConditionFormula>
        <errorMessage>Please check the Product, Product Version and Resolution fields. They cannot be blank or selected as "Other".</errorMessage>
    </validationRules>
</CustomObject>